--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,10 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 20MB
-
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    default-property-inclusion: non_null
+    time-zone: GMT+8
 server:
   port: 8081
   max-http-header-size: 10MB
