--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -36,4 +36,4 @@ markerhub:
     secret: ti8n3439n439t43ld9nv9343ddfer09h
     #    七天
     expire: 604800
-    header: token
+    header: Authorization
