fix: 遗漏锁接口

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,7 +44,7 @@ vueblog:
     keep-alive-time: 10
 
 locks:
-  listByYear,getCountByYear,list,detail,getBlogStatus,searchYears
+  listByYear,getCountByYear,list,detail,getBlogStatus,searchYears,getJWT
 
 #logging:
 #  level:
