--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,3 @@
 com.markerhub.common.valid.ListValue.message=must submit 0 or 1
+com.markerhub.common.valid.cooperateBlogId.message=room is full
+com.markerhub.common.valid.blogAuthentication.message=room is full
