--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>vueblog</description>
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
